[metadata]
name = cpip
version = 0.9.9
author = Paul Ross
author_email = apaulross@gmail.com
license = GPL-2.0-or-later
description = CPIP is a C/C++ Preprocessor implemented in Python.
keywords = cpip
url = https://github.com/paulross/cpip
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
include_package_data = True
tests_require = pytest, pytest-runner
package_dir =
    = src

[options.packages.find]
where = src
include = cpip

[options.entry_points]
console_scripts =
    cpipmain=cpip.CPIPMain:main
    cpipduperelink=cpip.DupeRelink:main

[bumpversion]
current_version = 0.9.9
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:cpip/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
